--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 DB_USERNAME = 'danmt'
 DB_PASSWORD = '0945910637Dan'
 PORT = 4000
+HOST = 'https://my-twitter-clone.com'
 DB_NAME = 'twitter-dev'
 DB_TWEETS_COLLECTION='tweets'
 DB_USERS_COLLECTION='users'
