--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.6",
@@ -27,6 +28,7 @@
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "mime-types": "^2.1.35",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "rimraf": "^5.0.1",
@@ -37,14 +39,19 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
     "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "mime": "^4.0.1",
     "minimist": "^1.2.8",
     "mongodb": "^6.5.0",
-    "sharp": "^0.33.3"
+    "nanoid": "^5.0.7",
+    "sharp": "^0.33.3",
+    "slash": "^5.1.0",
+    "zx": "^8.0.1"
   }
 }
