--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ DB_REFRESH_TOKENS_COLLECTION='refresh_tokens'
 DB_FOLLOWERS_COLLECTION='followers'
 DB_VIDEO_STATUS_COLLECTION='video_status'
 DB_CONVERSATION_COLLECTION='conversations'
-DB_PASSWORD_SECRET = '@twitter@'
+PASSWORD_SECRET = '@twitter@'
 
 JWT_SECRET_ACCESS_TOKEN='@twitter-dev-jwt12344321@'
 JWT_SECRET_REFRESH_TOKEN='@twitter-dev-jwt12344321@#'
@@ -33,3 +33,9 @@ REFRESH_TOKEN_EXPIRES_IN='100d'
 ACCESS_TOKEN_EXPIRES_IN='1d'
 EMAIL_VERIFY_TOKEN_EXPIRES_IN='7d'
 FORGOT_PASSWORD_TOKEN_EXPIRES_IN='7d'
+
+AWS_ACCESS_KEY_ID='AKIATCKAOXJD7MBAIBHX'
+AWS_SECRET_ACCESS_KEY='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'
+AWS_REGION='ap-southeast-1'
+SES_FROM_ADDRESS='thanhdan1999@gmail.com'
+S3_BUCKET_NAME= 'danmt-twitter-clone-ap-southeast-1'
