--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -31,6 +31,8 @@ COPY .env.development .
 COPY ./src ./src 
 COPY ./src/openapi ./src/openapi
 
+RUN apk update && apk add bash
+RUN apk add  --no-cache ffmpeg
 RUN apk add python3
 RUN npm install pm2 -g
 RUN npm install
