--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,6 @@ version: '3.8'
 
 services:
   twitter-api:
-    image: danmt/twitter-api:v0
+    image: danmt/twitter:v0
     ports:
       - "4000:4000"
